# Whip-Git-Summarizer

./: .env  .gitignore  README.md  TODO.txt  ai_module.py  config.py  gemini_provider.py  installer.py  key.txt  main.py  model_provider.py  notes.txt  ollama_provider.py  openai_provider.py  pyproject.toml  test_providers.py  text1.txt  whip
.kiro/specs/: commit-history-summarization.md  global-cli.md
.kiro/specs/user-defined-model/: tasks.md
.kiro/steering/: project.md
whip_git_summarizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
