[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whip-git-summarizer"
version = "0.1.0"
description = "AI-powered git change summarizer"
requires-python = ">=3.8"
dependencies = [
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
whip = "main:main"

[tool.setuptools]
py-modules = ["main", "ai_module", "config", "model_provider", "gemini_provider", "openai_provider", "ollama_provider"]

